--- a/templates/patients/add.html
+++ b/templates/patients/add.html
@@ -4,7 +4,7 @@
         <div class="col-lg">
             <hr>
             <div class="card card-body">
-                <form action="" method="post">
+                <form action="" method="post" enctype="multipart/form-data">
                     <table class="table table-lg">
                         <tr>
                             {% csrf_token %}
